Fix bug where buttons would overlap other elements

--- a/src/css/Button.css
+++ b/src/css/Button.css
@@ -10,7 +10,6 @@
   font-family: "Lato", sans-serif;
   font-size: 11pt;
   cursor: pointer;
-  z-index: 1;
   text-align: center;
 }
 
